<resources>
    <string name="app_name">Product App</string>
    <string name="Product">Product</string>
    <string name="color">Color: %1$s</string>
    <string name="rupee">%1$s\u20B9</string>
    <string name="material">Material: %1$s</string>
    <string name="adjective">Adjective: %1$s</string>
    <string name="Product_Name">Product Name</string>
    <string name="Product_Color">Product Color</string>
    <string name="Product_Price">Product Price</string>
    <string name="Add_Product">Add Product</string>
    <string name="Save_Product">Save Product</string>
    <string name="Product_Material">Add Material</string>
    <string name="Product_Adjective">Add Adjective</string>
    <string name="Enter_Title">Enter Product Name</string>
    <string name="Enter_Color">Enter Product Color</string>
    <string name="Enter_Price">Enter Product Price</string>
    <string name="Enter_Adjective">Enter Product Adjective</string>
    <string name="Enter_Material">Enter Product Material</string>
    <string name="Invalid_Price">Price must be greater than 0</string>
    <string name="no_internet">No Internet Available</string>
    <string name="Product_save_success">Product Saved Successfully</string>
</resources>